# Plex-OAuth

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/: copilot-instructions.md
templates/: base.html  error.html  index.html  success.html
