[project]
name = "plex-oauth"
version = "1.0.0"
description = "Flask app for Plex OAuth authentication"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "gunicorn>=21.2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-flask>=1.3.0",
]
